--- a/client/src/pages/page.module.css
+++ b/client/src/pages/page.module.css
@@ -2,7 +2,15 @@
   display: flex;
   flex-direction: column;
   height: calc(100vh - 88px);
+  min-height: 0;
   overflow: hidden;
+}
+
+.content {
+  flex: 1;
+  min-height: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .heading {
